[gd_scene load_steps=14 format=3 uid="uid://bkuw2yqe0vgx4"]

[ext_resource type="Texture2D" uid="uid://dktmdkwk7vjbq" path="res://Asserts/monster/boss.png" id="1_65dd4"]
[ext_resource type="Script" path="res://Scripts/Boss/boss.gd" id="1_j8bgs"]
[ext_resource type="Script" path="res://Component/HurtBoxComponent.gd" id="2_8jcad"]
[ext_resource type="Resource" uid="uid://dmqnveoqacaxn" path="res://Data/Stats/BossStats.tres" id="2_vly7x"]
[ext_resource type="Script" path="res://Component/HitBoxComponent.gd" id="4_wssvd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1ljwl"]
radius = 29.0
height = 94.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cw3sy"]
radius = 29.0
height = 94.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_htel4"]
radius = 29.0
height = 94.0

[sub_resource type="Animation" id="Animation_do1uf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_65dd4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [22]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [66]
}

[sub_resource type="Animation" id="Animation_35n3q"]
resource_name = "hit"
length = 0.12
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_65dd4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [22]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.03, 0.06, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [66, 68, 69, 70]
}

[sub_resource type="Animation" id="Animation_j1ih6"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_65dd4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [22]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_oqott"]
resource_name = "death"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_65dd4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [22]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 109]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nj7ia"]
_data = {
"RESET": SubResource("Animation_do1uf"),
"death": SubResource("Animation_oqott"),
"hit": SubResource("Animation_35n3q"),
"idle": SubResource("Animation_j1ih6")
}

[node name="Boss" type="CharacterBody2D" groups=["enemies"]]
position = Vector2(-16, 19)
collision_layer = 2
script = ExtResource("1_j8bgs")
stats = ExtResource("2_vly7x")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(3, 3)
texture = ExtResource("1_65dd4")
hframes = 22
vframes = 5
frame = 66

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, 38)
shape = SubResource("CapsuleShape2D_1ljwl")

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2(3, 3)
script = ExtResource("2_8jcad")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(2, 36)
shape = SubResource("CapsuleShape2D_cw3sy")
debug_color = Color(0.911901, 0.200797, 0.543849, 0.42)

[node name="HitBox" type="Area2D" parent="." groups=["enemies"]]
script = ExtResource("4_wssvd")
damage = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(2, 36)
shape = SubResource("CapsuleShape2D_htel4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nj7ia")
}
autoplay = "idle"

[node name="Timer" type="Timer" parent="."]
wait_time = 1.2

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
